--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -30,3 +30,4 @@ jobs:
           external_repository: zsgilber/zsgilber.github.io
           publish_branch: master
           publish_dir: ./public
+          cname: www.zachgilbert.dev
