--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://zachgilbert.dev/"
+baseURL: "https://zsgilber.github.io"
 languageCode: "en-us"
 title: "zachgilbert.dev"
 theme: "toha"
