add new background image

--- a/config.yaml
+++ b/config.yaml
@@ -37,4 +37,4 @@ params:
     enable: false
 
   # Background image of the landing page
-  background: /images/site/background.jpg
+  background: /images/site/az-sunset.jpg
