--- a/config.yaml
+++ b/config.yaml
@@ -38,3 +38,10 @@ params:
 
   # Background image of the landing page
   background: /images/site/az-sunset.jpg
+
+  # The inverted logo will be used in the initial transparent navbar and
+  # the main logo will be used in the non-transparent navbar.
+  logo:
+    main: images/site/favicon.png
+    inverted: images/site/favicon.png
+    favicon: images/site/favicon.png
